beryllium (1.2.6) debian;

  * fix clip remove on click
  * Mono style icons

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 15 Apr 2015 12:41:00 +0800

beryllium (1.2.5) debian;

  * fix clip record countdown timer issue with qt 5.4

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 23 Jan 2015 13:34:00 +0800

beryllium (1.2.4) debian;

  * d-bus: fix d-bus service connection

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 19 Jan 2015 17:39:00 +0800

beryllium (1.2.3) debian;

  * d-bus: record clip/take snapshot: pull src parameter up.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 19 Jan 2015 11:11:00 +0800

beryllium (1.2.2) debian;

  * d-bus: record clips/take snapshots for each src; select active src.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 15 Jan 2015 15:33:00 +0800

beryllium (1.2.1) debian;

  * Bug fix release.

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 23 Dec 2014 18:13:00 +0800

beryllium (1.2.0) debian;

  * Multiple video sources. No more non-touch version.

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 05 Dec 2014 15:00:00 +0800

beryllium (1.1.6) debian;

  * All files, scheduled for removal, now got removed before uplading to DICOM.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 04 Dec 2014 12:54:00 +0800

beryllium (1.1.5) debian;

  * Configurable long-press-timeout, in msecs (long-press-timeout=500 in config file).

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 14 Nov 2014 14:42:59 +0800

beryllium (1.1.4) debian;

  * Extra title for main window (ui/extra-tile=true in config file).

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 19 Jun 2014 14:32:00 +0900

beryllium (1.1.3) debian;

  * Fix for Http push.

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 4 Jun 2014 19:35:00 +0900

beryllium (1.1.2) debian;

  * Http push video stream to a streaming server.
  * Option to not turn off streaming on idle.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 28 May 2014 14:39:00 +0900

beryllium (1.1.1) debian;

  * Config values from files specified with -c option now are read only
