@@ -1,3 +1,10 @@
+beryllium (1.2.7) debian;
+
+  * workaround for compiz bug
+  * https://bugs.launchpad.net/ubuntu/+source/openjdk-7/+bug/1110138
+
+ -- Pavel Bludov <pbludov@gmail.com>  Mon, 27 Jul 2015 15:05:00 +0800
+
 beryllium (1.2.6) debian;
 
   * fix clip remove on click
